tests/baselines/reference/reexportedMissingAlias.errors.txt
second.d.ts(1,27): error TS2503: Cannot find namespace 'CompletelyMissing'.


==== second.d.ts (1 errors) ====
    export import Component = CompletelyMissing;
                              ~~~~~~~~~~~~~~~~~
!!! error TS2503: Cannot find namespace 'CompletelyMissing'.
==== first.d.ts (0 errors) ====
    import * as Second from './second';
    export = Second;
==== crash.ts (0 errors) ====
    import { Component } from './first';
    class C extends Component { }
    